@@ -59,6 +59,8 @@ Fixes
   * Fixed issue with PDB Topology parsing where if serials went
     over 100k, they wrapped to '***', breaking the parser (Issue #446)
   * Fixed AtomGroup.sequence() (Issue #451)
+  * Fixed PrimitivePDBParser not detecting when resids had looped over
+    10,000. The original resid is stored as Atom.resnum (Issue #454)
 
 09/07/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl,
         manuel.nuno.melo, cyanezstange, khuston, ivirshup, kain88-de,
